--- a/automation/roles/challenge/tasks/main.yml
+++ b/automation/roles/challenge/tasks/main.yml
@@ -3,7 +3,7 @@
     template:  src={{ item.src }} dest={{ item.dest }} owner={{ item.owner }} group={{ item.group }} mode={{ item.mode}}
     with_items:
       - { src: 'templates/dev-challenge.env.j2', dest: '/home/vagrant/dev-challenge.env', owner: 'vagrant', group: 'vagrant', mode: '0655'}
-      - { src: 'templates//etc/rsyslog.conf .j2', dest: '/etc/rsyslog.conf ', owner: 'root', group: 'root', mode: '0622'}
+      - { src: 'templates/rsyslog.conf.j2', dest: '/etc/rsyslog.conf ', owner: 'root', group: 'root', mode: '0622'}
     become: true
     ignore_errors: yes
       
@@ -15,7 +15,7 @@
         version: "2"
         services:
             weboglang:
-              image: "{{GOAPP_NAME}}":{{GOAPP_VERSION}}
+              image: devops-challenge:{{GOAPP_VERSION}}
               hostname: "{{ ansible_hostname }}-{{GOAPP_NAME}}"
               mem_limit: 512m
               env_file:
@@ -26,6 +26,7 @@
               logging:
                 driver: syslog
                 options:
-                  syslog-address: udp:/{{SYSLOG_HOST}}/:{{SYSLOG_PORT}}
+                  syslog-address: udp:/devops-challenge1/:514
                   syslog-facility: daemon
                   tag: "{{ ansible_hostname }}-{{GOAPP_NAME}}"
+      become: true
