--- a/automation/group_vars/dev.yml
+++ b/automation/group_vars/dev.yml
@@ -3,7 +3,7 @@ GOAPP_VERSION: 0.0.5
 
 APP_PORT: "8080"
 
-SYSLOGHOST: devops-challenge1
+SYSLOG_HOST: devops-challenge1
 SYSLOG_PORT: 514
 
 TZ: America/Sao_Paulo
